--- a/package.json
+++ b/package.json
@@ -11,8 +11,6 @@
     "build": "npm run clean && NODE_ENV=production rollup --config rollup.config.ts --configPlugin typescript",
     "clean": "rm -rf dist",
     "deploy": "npm run build && NODE_ENV=production firebase deploy",
-    "firestore:copy": "ts-node-script ./scripts/firestore-copy",
-    "firestore:init": "ts-node-script ./scripts/firestore-init",
     "fix": "concurrently npm:fix:*",
     "fix:eslint": "eslint . --ext .ts --ext .js --fix",
     "fix:markdownlint": "markdownlint '**/*.md' --fix",
@@ -20,19 +18,21 @@
     "fix:stylelint": "stylelint \"src/components/**/*.ts\" \"src/styles/**/*.ts\" --fix",
     "install:functions": "npm --prefix ./functions ci",
     "lint": "concurrently npm:lint:*",
-    "lint:eslint": "eslint . --ext .ts --ext .js",
+    "lint:eslint": "eslint . --ext .ts --ext .js --fix",
     "lint:markdownlint": "markdownlint '**/*.md'",
     "lint:prettier": "prettier --check .",
     "lint:stylelint": "stylelint \"src/components/**/*.ts\" \"src/styles/**/*.ts\"",
     "lint:types:functions": "npm --prefix ./functions run build",
     "lint:types:web": "tsc --noEmit",
     "postinstall": "npm run install:functions",
-    "serve": "NODE_ENV=production concurrently --kill-others npm:start:*",
-    "start": "npm run clean && NODE_ENV=development concurrently --kill-others npm:start:*",
-    "start:emulators": "firebase emulators:start",
-    "start:functions": "npm --prefix functions start",
+    "serve": "SET NODE_ENV=production concurrently --kill-others npm:start:*",
+    "start": "npm run clean && SET NODE_ENV=development concurrently --kill-others npm:start:*",
     "start:rollup": "mkdir -p dist && rollup --config rollup.config.ts --configPlugin typescript --watch",
-    "test": "jest"
+    "test": "jest",
+    "startR": "react-scripts start",
+    "buildR": "react-scripts build",
+    "testR": "react-scripts test",
+    "ejectR": "react-scripts eject"
   },
   "dependencies": {
     "@abraham/remotedata": "1.0.0",
@@ -59,15 +59,14 @@
     "@radi-cho/star-rating": "git+https://git@github.com/abraham/star-rating.git#polymer-3",
     "@reduxjs/toolkit": "^1.8.3",
     "@vaadin/router": "^1.7.4",
-    "firebase": "^9.7.0",
     "lit": "^2.2.7",
     "marked": "^4.0.15",
     "pwa-helpers": "^0.9.1",
+    "react-scripts": "^5.0.1",
     "register-service-worker": "^1.7.2",
     "web-vitals": "^2.1.4"
   },
   "devDependencies": {
-    "@firebase/rules-unit-testing": "^2.0.2",
     "@jest/globals": "^27.5.1",
     "@jest/types": "^27.5.1",
     "@rollup/plugin-json": "^4.1.0",
@@ -94,8 +93,6 @@
     "eslint-plugin-jest": "^26.1.5",
     "eslint-plugin-jest-dom": "^4.0.1",
     "eslint-plugin-testing-library": "^5.3.1",
-    "firebase-admin": "^11.0.0",
-    "firebase-tools": "^11.2.0",
     "jest": "^27.5.1",
     "jest-dev-server": "^6.0.3",
     "markdownlint": "^0.26.0",
